# sidewire

./: LICENSE  README.md  pyproject.toml
experiments/: mqtt_client.py  something.py
sidewire/: __init__.py  base_msg.py  mqtt_client.py  node_addr.py  obj_collection.py  signal_client.py  signal_defs.py  signal_msgs.py  signal_router.py  signal_utils.py  something.py  utils.py
tests/: test_signaling.py
